# HubV2

./: .gitignore  AGENTS.md  GEMINI.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  fix_db.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_constraints_and_triggers.py  0003_add_tasks_table.py  0004_epic2_employee_status_and_offboarding.py  0005_epic3_admin_dropdown_seed.py  0006_epic3_role_permission_extensions.py  0007_add_employee_number_unique.py  0008_epic3_notification_settings.py  0009_add_search_tokens_to_skills.py  0010_roles_redesign.py  0011_add_deleted_at_to_dashboard_tasks.py  0012_add_manager_permissions_to_roles.py  0013_role_assignment_blacklist.py  0014_add_sort_order_to_roles.py  0015_add_not_null_to_search_tokens.py  0016_add_entra_oid_to_employees.py  0017_add_auth_tables.py  0018_add_entra_group_role_mappings.py  0019_seed_config_dropdowns.py  0020_seed_all_reference_data.py  0021_seed_sysadmin_permissions.py  0022_seed_missing_dropdown_categories.py  0023_add_standard_columns_to_entra_mappings.py  3d02f2033375_migrate_rest_to_uuid.py  42073ca3c7ee_migrate_ids_to_uuid_all.py  6ac27259d060_update_id_asset.py
backend/scripts/: seed_skills.py
backend/src/: fix_db.py
backend/src/adthub/: config.py  exceptions.py  main.py
backend/src/adthub/api/: admin_settings.py  asset_category.py  assets.py  auth.py  dashboard.py  dependencies.py  dev.py  employees.py  entra_sync.py  notifications.py  roles.py  skills.py
backend/src/adthub/db/: engine.py
backend/src/adthub/lib/: logging.py  search_tokens.py
backend/src/adthub/schemas/: admin_settings.py  assets.py  common.py  dashboard.py  employees.py  notification_settings.py  roles.py  skills.py
backend/src/adthub/services/: admin_settings_service.py  assets.py  audit.py  auth_service.py  dashboard_service.py  employee_service.py  entra_sync_service.py  graph_service.py  notification_settings_service.py  role_service.py  skill_service.py  work_email.py
backend/tests/: conftest.py
backend/tests/factories/: asset_factory.py  config_factory.py  employee_factory.py  project_factory.py  skill_factory.py  task_factory.py  timesheet_factory.py
backend/tests/integration/: conftest.py
backend/tests/integration/repositories/: test_asset_repository.py  test_dashboard_repository.py  test_employee_repository.py  test_project_repository.py  test_skill_repository.py  test_timesheet_repository.py
backend/tests/schema/: conftest.py  test_d10_dashboard_tasks.py  test_d10_skills_catalog.py  test_d1_employees.py  test_d2_assets.py  test_d3_timesheets.py  test_d4_onboarding.py  test_d5_ats.py  test_d6_config.py  test_d7_audit.py  test_d9_referential.py
backend/tests/smoke/: test_env.py
backend/tests/unit/: conftest.py
backend/tests/unit/api/: test_auth_endpoints.py  test_dependencies.py
backend/tests/unit/lib/: test_search_tokens.py
backend/tests/unit/repositories/: test_asset_repository.py  test_config_dropdown_repository.py  test_dashboard_repository.py  test_employee_repository.py  test_notification_settings_repository.py  test_offboarding_task_repository.py  test_project_repository.py  test_role_repository.py  test_skill_repository.py  test_timesheet_repository.py
backend/tests/unit/services/: test_admin_settings_service.py  test_auth_service.py  test_auth_service_extended.py  test_dashboard_service.py  test_employee_service.py  test_employee_service.py.bak  test_entra_sync_service.py  (+5 more)
(+549 files in other folders)
